crates/diffguard-domain/tests/snapshots/snapshot_tests_work_76372a5b__evaluate_lines_multiple_rules.snap
---
source: crates/diffguard-domain/tests/snapshot_tests_work_76372a5b.rs
expression: snapshot
---
Evaluation {
  findings: 2 items
    [0] rule_id=rule_one, severity=Info, message=first rule message, path=test.txt, line=1, column=Some(10), match_text="pattern", snippet="this has pattern in it"
    [1] rule_id=rule_two, severity=Error, message=second rule message, path=test.txt, line=1, column=Some(10), match_text="pattern", snippet="this has pattern in it"
  counts: VerdictCounts { info: 1, warn: 0, error: 1, suppressed: 0 }
  truncated_findings: 0
  files_scanned: 1
  lines_scanned: 1
  rule_hits: 2 items (sorted by rule_id)
    RuleHitStat { rule_id=rule_one, total=1, emitted=1, suppressed=0, info=1, warn=0, error=0 }
    RuleHitStat { rule_id=rule_two, total=1, emitted=1, suppressed=0, info=0, warn=0, error=1 }
}
