crates/diffguard-domain/tests/snapshots/snapshot_tests_work_76372a5b__evaluate_lines_single_match.snap
---
source: crates/diffguard-domain/tests/snapshot_tests_work_76372a5b.rs
expression: snapshot
---
Evaluation {
  findings: 1 items
    [0] rule_id=test_rule, severity=Warn, message=test message, path=test.txt, line=1, column=Some(10), match_text="pattern", snippet="this has pattern in it"
  counts: VerdictCounts { info: 0, warn: 1, error: 0, suppressed: 0 }
  truncated_findings: 0
  files_scanned: 1
  lines_scanned: 1
  rule_hits: 1 items (sorted by rule_id)
    RuleHitStat { rule_id=test_rule, total=1, emitted=1, suppressed=0, info=0, warn=1, error=0 }
}
