crates/diffguard-domain/tests/snapshots/snapshot_tests_work_76372a5b__evaluate_rule_hits_aggregation.snap
---
source: crates/diffguard-domain/tests/snapshot_tests_work_76372a5b.rs
expression: snapshot
---
Evaluation {
  findings: 3 items
    [0] rule_id=rule_a, severity=Warn, message=message a, path=a.txt, line=1, column=Some(1), match_text="match_a", snippet="match_a and match_b"
    [1] rule_id=rule_b, severity=Info, message=message b, path=a.txt, line=1, column=Some(13), match_text="match_b", snippet="match_a and match_b"
    [2] rule_id=rule_a, severity=Warn, message=message a, path=a.txt, line=2, column=Some(1), match_text="match_a", snippet="match_a"
  counts: VerdictCounts { info: 1, warn: 2, error: 0, suppressed: 0 }
  truncated_findings: 0
  files_scanned: 1
  lines_scanned: 2
  rule_hits: 2 items (sorted by rule_id)
    RuleHitStat { rule_id=rule_a, total=2, emitted=2, suppressed=0, info=0, warn=2, error=0 }
    RuleHitStat { rule_id=rule_b, total=1, emitted=1, suppressed=0, info=1, warn=0, error=0 }
}
